order purchase history with new cart and cart items support

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -17,6 +17,7 @@
     "allStatus": "كل الحالات",
     "confirmed": "تم التأكيد",
     "pending": "قيد الانتظار",
+    "received": "تم الاستلام",
     "allTypes": "كل الأنواع",
     "books": "الكتب",
     "products": "المنتجات"
@@ -25,11 +26,16 @@
   "exportCSV": "تصدير CSV",
   "exporting": "جارٍ التصدير...",
   "exportXLSX": "تصدير XLSX",
+  "export": "تصدير",
+  "clearFilters": "مسح المرشحات",
+  "activeFilters": "المرشحات النشطة",
   "table": {
     "product": "المنتج",
     "customer": "العميل",
     "type": "النوع",
     "price": "السعر",
+    "itemCount": "عدد العناصر",
+    "couponCode": "كود الخصم",
     "transferFrom": "تم التحويل من",
     "status": "الحالة",
     "notes": "الملاحظات",
@@ -37,6 +43,7 @@
     "actions": "الإجراءات",
     "confirmed": "تم التأكيد",
     "pending": "قيد الانتظار",
+    "received": "تم الاستلام",
     "by": "بواسطة",
     "book": "كتاب",
     "productType": "منتج",
@@ -46,6 +53,10 @@
     "viewPaymentScreenshot": "عرض صورة الدفع",
     "contactWhatsApp": "التواصل عبر واتساب",
     "confirmOrder": "تأكيد الطلب",
+    "receiveOrder": "استلام الطلب",
+    "receive": "استلام",
+    "confirm": "تأكيد",
+    "deleteOrder": "حذف الطلب",
     "noOrdersFound": "لم يتم العثور على طلبات",
     "tryAdjustingSearch": "حاول تعديل معايير البحث أو التصفية",
     "previous": "السابق",
@@ -65,6 +76,7 @@
     "paymentInfo": "معلومات الدفع",
     "paymentNumber": "رقم الدفع",
     "transferredFrom": "تم التحويل من",
+    "totalPrice": "السعر الإجمالي",
     "bookInfo": "معلومات الكتاب",
     "nameOnBook": "الاسم على الكتاب",
     "numberOnBook": "الرقم على الكتاب",
@@ -84,14 +96,22 @@
   },
   "alerts": {
     "orderConfirmed": "تم تأكيد الطلب بنجاح!",
-  "exportSuccess": "تم تصدير الطلبات بنجاح!",
-  "exportFailed": "فشل في تصدير الطلبات",
+    "orderReceived": "تم استلام الطلب بنجاح!",
+    "exportSuccess": "تم تصدير الطلبات بنجاح!",
+    "exportFailed": "فشل في تصدير الطلبات",
     "failedToConfirm": "فشل في تأكيد الطلب: ",
     "notesSaved": "تم حفظ الملاحظات بنجاح!",
     "failedToSaveNotes": "فشل في حفظ الملاحظات: ",
-    "unsavedChanges": "لديك تغييرات غير محفوظة. هل أنت متأكد من أنك تريد الإغلاق؟"
+    "unsavedChanges": "لديك تغييرات غير محفوظة. هل أنت متأكد من أنك تريد الإغلاق؟",
+    "confirmDeleteOrder": "هل أنت متأكد من أنك تريد حذف هذا الطلب؟",
+    "orderDeleted": "تم حذف الطلب بنجاح!",
+    "failedToDeleteOrder": "فشل في حذف الطلب: ",
+    "noDataToExport": "لا توجد بيانات للتصدير"
   },
   "export": {
+    "csvFormat": "صيغة CSV",
+    "jsonFormat": "صيغة JSON",
+    "xlsxFormat": "صيغة XLSX",
     "exportCSVPage": "تصدير الصفحة (CSV)",
     "exportCSVAll": "تصدير الكل (CSV)",
     "exportJSONPage": "تصدير الصفحة (JSON)",
