--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -17,6 +17,7 @@
     "allStatus": "All Status",
     "confirmed": "Confirmed",
     "pending": "Pending",
+    "received": "Received",
     "allTypes": "All Types",
     "books": "Books",
     "products": "Products"
@@ -25,11 +26,16 @@
   "exportCSV": "Export CSV",
   "exporting": "Exporting...",
   "exportXLSX": "Export XLSX",
+  "export": "Export",
+  "clearFilters": "Clear Filters",
+  "activeFilters": "Active Filters",
   "table": {
     "product": "Product",
     "customer": "Customer",
     "type": "Type",
     "price": "Price",
+    "itemCount": "Item Count",
+    "couponCode": "Coupon Code",
     "transferFrom": "Transfer From",
     "status": "Status",
     "notes": "Notes",
@@ -37,6 +43,7 @@
     "actions": "Actions",
     "confirmed": "Confirmed",
     "pending": "Pending",
+    "received": "Received",
     "by": "by",
     "book": "Book",
     "productType": "Product",
@@ -46,6 +53,10 @@
     "viewPaymentScreenshot": "View Payment Screenshot",
     "contactWhatsApp": "Contact via WhatsApp",
     "confirmOrder": "Confirm Order",
+    "receiveOrder": "Receive Order",
+    "receive": "Receive",
+    "confirm": "Confirm",
+    "deleteOrder": "Delete Order",
     "noOrdersFound": "No orders found",
     "tryAdjustingSearch": "Try adjusting your search or filter criteria",
     "previous": "Previous",
@@ -65,6 +76,7 @@
     "paymentInfo": "Payment Information",
     "paymentNumber": "Payment Number",
     "transferredFrom": "Transferred From",
+    "totalPrice": "Total Price",
     "bookInfo": "Book Information",
     "nameOnBook": "Name on Book",
     "numberOnBook": "Number on Book",
@@ -84,14 +96,22 @@
   },
   "alerts": {
     "orderConfirmed": "Order confirmed successfully!",
-  "exportSuccess": "Orders exported successfully!",
-  "exportFailed": "Failed to export orders",
+    "orderReceived": "Order received successfully!",
+    "exportSuccess": "Orders exported successfully!",
+    "exportFailed": "Failed to export orders",
     "failedToConfirm": "Failed to confirm order: ",
     "notesSaved": "Notes saved successfully!",
     "failedToSaveNotes": "Failed to save notes: ",
-    "unsavedChanges": "You have unsaved changes. Are you sure you want to close?"
+    "unsavedChanges": "You have unsaved changes. Are you sure you want to close?",
+    "confirmDeleteOrder": "Are you sure you want to delete this order?",
+    "orderDeleted": "Order deleted successfully!",
+    "failedToDeleteOrder": "Failed to delete order: ",
+    "noDataToExport": "No data to export"
   },
   "export": {
+    "csvFormat": "CSV Format",
+    "jsonFormat": "JSON Format",
+    "xlsxFormat": "XLSX Format",
     "exportCSVPage": "Export Page (CSV)",
     "exportCSVAll": "Export All (CSV)",
     "exportJSONPage": "Export Page (JSON)",
