--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -87,6 +87,7 @@
     "notesPlaceholder": "أضف ملاحظات حول هذا الطلب...",
     "unsavedChanges": "لديك تغييرات غير محفوظة",
     "cancel": "إلغاء",
+    "deleteNotes" :"حذف الملاحظه",
     "saving": "جاري الحفظ...",
     "saveNotes": "حفظ الملاحظات",
     "edit": "تعديل",
