--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -25,7 +25,7 @@
       "role": "الدور",
       "bio": "نبذة عنك",
       "expertise": "الخبرات",
-      "phoneNumber": "الهاتف الشخصي",
+      "phoneNumber": "رقم الواتس",
       "phoneNumber2": "الهاتف الشخصي الثاني",
       "parentPhone": "هاتف ولي الأمر",
       "email": "البريد الإلكتروني",
