--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-Cart.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-Cart.json
@@ -55,7 +55,7 @@
     "checkoutFailed": "فشل إرسال الطلب. يرجى التحقق من معلوماتك والمحاولة مرة أخرى.",
     "removeItemFailed": "فشل حذف العنصر. يرجى المحاولة مرة أخرى.",
     "clearCartFailed": "فشل مسح السلة. يرجى المحاولة مرة أخرى.",
-    "fetchCartFailed": "فشل تحميل السلة. يرجى تحديث الصفحة."
+    "fetchCartFailed": "فشل تحميل السلة. يرجى تسجيل الدخول اولا."
   }
 }
 
