--- a/kalima-platform/frontend/public/locales/en/kalimaStore-Cart.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-Cart.json
@@ -55,7 +55,7 @@
     "checkoutFailed": "Failed to submit purchase. Please check your information and try again.",
     "removeItemFailed": "Failed to remove item. Please try again.",
     "clearCartFailed": "Failed to clear cart. Please try again.",
-    "fetchCartFailed": "Failed to load your cart. Please refresh the page."
+    "fetchCartFailed": "Failed to load your cart. Please Log In First."
   }
 }
 
