feat: 1. Free Products Support (Cart Total = 0), 2. Checkout Cooldown System (30 Seconds), 3. Already Purchased Product Indicators, 4. Confirmed Orders Report (Admin Dashboard), 5. WhatsApp Notifications with Product List (Admin Panel)

--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -65,6 +65,7 @@
   "select": "اختر",
   "Create": "اضافة",
   "MyLectures": "محاضراتي",
+  "ConfirmedOrdersReport":"تقرير الطلبات المؤكدة",
   "market": "المتجر",
   "signedLecturers": "المحاضرين الموقعين",
   "Analytics": "التحليلات"
