--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -64,6 +64,7 @@
   "select": "Select",
   "Create": "Create",
   "MyLectures": "My Lectures",
+  "ConfirmedOrdersReport":"Confirmed Orders Report",
   "storeDashboard": "Store Dashboard",
   "market": "Market",
   "signedLecturers": "Signed Lecturers",
