--- a/kalima-platform/frontend/public/locales/en/kalimaStore-Market.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-Market.json
@@ -22,7 +22,10 @@
   "product": {
     "discounts": "Discount",
     "currency": "ج",
-    "viewDetails": "View Details"
+    "viewDetails": "View Details",
+    "addToCart": "Add to Cart",
+    "purchased": "PURCHASED",
+    "new": "NEW"
   },
   "emptyState": {
     "title": "No items found",
