--- a/kalima-platform/frontend/public/locales/ar/createUser.json
+++ b/kalima-platform/frontend/public/locales/ar/createUser.json
@@ -9,37 +9,78 @@
     "bulkCreate": "إنشاء بالجملة"
   },
   "fields": {
-    "accountType": "نوع الحساب",
+    "studentId": "رقم الطالب",
+    "fullName": "الاسم الكامل",
     "gender": "الجنس",
-    "name": "الاسم",
+    "role": "الدور",
+    "bio": "نبذة عنك",
+    "expertise": "الخبرات",
+    "phoneNumber": "رقم الواتس",
+    "phoneNumber2": "الهاتف الشخصي الثاني",
+    "parentPhone": "هاتف ولي الأمر",
     "email": "البريد الإلكتروني",
+    "address": "العنوان",
+    "name": "الاسم",
+    "selectGender": "اختر الجنس",
+    "schoolName": "اسم المدرسة",
+    "schoolType": "نوع المدرسة",
+    "selectSchoolType": "اختر نوع المدرسة",
+    "grade": "الصف",
+    "selectGrade": "اختر الصف",
+    "variant": "الشعبة",
+    "selectVariant": "اختر الشعبة",
+    "selectHobbies": "اختر الهوايات",
+    "uploadAvatar": "رفع صورة شخصية",
+    "hobbies": "الهوايات",
+    "personalDetails": "البيانات الشخصية",
+    "parentDetails": "بيانات ولي الأ مر",
+    "schoolDetails": "تفاصيل المدرسة ولي الأمرراسة",
     "password": "كلمة المرور",
-    "confirmPassword": "تأكيد كلمة المرور",
-    "level": "المستوى الدراسي",
-    "phoneNumber": "رقم الهاتف",
-    "parentPhoneNumber": "رقم هاتف ولي الأمر",
-    "sequencedId": "الرقم التسلسلي",
-    "school": "المدرسة",
-    "subjects": "المواد الدراسية",
-    "expertise": "التخصص",
-    "bio": "السيرة الذاتية",
-    "assignedLecturer": "المحاضر المسؤول",
-    "sequencedIdOptional": "الرقم التسلسلي (اختياري)",
-    "parentPhoneNumberOptional": "رقم هاتف ولي الأمر (اختياري)",
-    "hobbies": "الاهتمامات",
-    "hobbiesOptional": "الاهتمامات (اختياري)",
-    "uploadCSV" :"تحميل ملف CSV",
-    "government" : "المحافظه",
-    "administrationZone" : "المناطق الادارية",
-    "selectGovernment" :"اختر المحافظه",
-    "selectAdministrationZone" :"اختر المناطق الادارية",
-    "profilePic": "صورة الملف الشخصي",
-    "referralSerial": "رقم التسلسل المرجعي",
-    "phoneNumber2": "رقم الهاتف (اختياري)",
+    "confirmPassword": "تاكيد كلمة المرور",
+    "childrenDetails": "تفاصيل الأبناء",
+    "childId": "رقم الأبن",
+    "childSequenceId": "رقم تسلسل الأبن",
+    "childrenSequenceIdsHelp": "استخدم الفواصل لفصل أرقام تسلسل الأبناء",
+    "childrenSequenceIds": "رقم تسلسل الأبناء",
+    "level": "المستوى",
+    "optional": "اختياري",
+    "selectLevel": "اختر المستوى",
+    "validatepassword": "تاكيد كلمة المرور",
     "subject": "المادة",
-    "levels": "المستويات",
+    "sequencedIdOptional": "رقم التسلسلي",
+    "parentPhoneNumberOptional": "رقم الهاتف ولي الامر",
+    "levels": "المستوي",
+    "subjectPlaceholder": "اكتب المادة",
+    "children": "ابناء",
+    "addOtherHobby": "اضافة هواية",
+    "add": "اضافة",
+    "cancel": "الغاء",
+    "enterHobby": "اكتب هواية",
     "teachesAtType": "أين تدرس؟",
-    "socialMedia": "وسائل التواصل الاجتماعي"
+    "selectTeachesAt": "حدد مكان التدريس",
+    "centers": "المراكز",
+    "centerName": "اسم المركز",
+    "school": "المدرسة",
+    "socialMedia": "وسائل التواصل الاجتماعي",
+    "selectPlatform": "اختر المنصة",
+    "accountName": "لينك الحساب",
+    "selectSubject": "اختر المادة",
+    "facebook": "فيسبوك",
+    "twitter": "تويتر",
+    "instagram": "إنستاغرام",
+    "linkedin": "لينكدين",
+    "tikTok": "تيك توك",
+    "youtube": "يوتيوب",
+    "telegram": "تيليجرام",
+    "whatsApp": "واتساب",
+    "government": "المحافظة",
+    "selectGovernment": "اختر المحافظة",
+    "administrationZone": "الاداره التعليميه",
+    "selectAdministrationZone": "اختر الاداره التعليميه",
+    "yourCustomHobbies": "هواياتك الخاصة",
+    "referralSerial": "كود الدعوه",
+    "profilePic": "صورة الملف الشخصي",
+    "accountType": "نوع الحساب"
   },
   "placeholders": {
     "selectAccountType": "اختر نوع الحساب",
@@ -70,7 +111,7 @@
     "student": "طالب",
     "parent": "ولي أمر",
     "lecturer": "محاضر",
-    "teacher" : "مدرس"
+    "teacher": "مدرس"
   },
   "gender": {
     "male": "ذكر",
@@ -131,8 +172,8 @@
     "uploadCSV": "تحميل ملف CSV",
     "csvFormat": "يجب ان يحتوي الملف CSV على الحقول التالية:"
   },
-  "csvFields" :{
-    "name":"الاسم",
-    "phone":"الرقم"
+  "csvFields": {
+    "name": "الاسم",
+    "phone": "الرقم"
   }
 }
