feat: water mark image and payment method

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -74,8 +74,10 @@
     "productInfo": "معلومات المنتج",
     "customerNotes": "ملاحظات العميل",
     "paymentInfo": "معلومات الدفع",
+    "paymentMethod": "طريقة الدفع",
     "paymentNumber": "رقم الدفع",
     "transferredFrom": "تم التحويل من",
+    "viewWatermark": "عرض العلامة المائية",
     "totalPrice": "السعر الإجمالي",
     "bookInfo": "معلومات الكتاب",
     "nameOnBook": "الاسم على الكتاب",
