--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -74,8 +74,10 @@
     "productInfo": "Product Information",
     "customerNotes": "Customer Notes",
     "paymentInfo": "Payment Information",
+    "paymentMethod": "Payment Method",
     "paymentNumber": "Payment Number",
     "transferredFrom": "Transferred From",
+    "viewWatermark": "View Watermark",
     "totalPrice": "Total Price",
     "bookInfo": "Book Information",
     "nameOnBook": "Name on Book",
