--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -65,7 +65,7 @@
   "select": "اختر",
   "Create": "اضافة",
   "MyLectures": "محاضراتي",
-  "ConfirmedOrdersReport":"تقرير الطلبات المؤكدة",
+  "ConfirmedOrdersReport":"تقرير الاداء",
   "market": "المتجر",
   "signedLecturers": "المحاضرين الموقعين",
   "Analytics": "التحليلات"
