--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
@@ -20,6 +20,67 @@
     "printingSection": "قسم الطباعة",
     "printingDescription": "خدمات ومواد الطباعة "
   },
+
+ "paymentMethod": {
+  "title": "طريقة الدفع",
+  "subtitle": "إعداد طريقة الدفع الافتراضية (للإدارة فقط)",
+
+  "fields": {
+    "name": "اسم طريقة الدفع",
+    "phoneNumber": "رقم الدفع"
+  },
+
+  "placeholders": {
+    "name": "مثال: فودافون كاش",
+    "phoneNumber": "مثال: 012xxxxxxxx"
+  },
+
+  "hints": {
+    "phoneNumber": "سيتم استخدام هذا الرقم في جميع عمليات الدفع"
+  },
+
+  "table": {
+    "name": "الاسم",
+    "phoneNumber": "رقم الدفع",
+    "status": "الحالة",
+    "createdAt": "تاريخ الإنشاء",
+    "actions": "الإجراءات"
+  },
+
+  "status": {
+    "active": "نشط",
+    "disabled": "معطّل"
+  },
+
+  "actions": {
+    "save": "حفظ طريقة الدفع",
+    "update": "تحديث طريقة الدفع",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "toggle": "تغيير الحالة"
+  },
+
+  "noMethods": "لا توجد طرق دفع",
+
+  "alerts": {
+    "savedSuccess": "تم حفظ طريقة الدفع بنجاح",
+    "updatedSuccess": "تم تحديث طريقة الدفع بنجاح",
+    "deletedSuccess": "تم حذف طريقة الدفع بنجاح",
+    "saveError": "حدث خطأ أثناء حفظ طريقة الدفع",
+    "confirmDelete": "هل أنت متأكد من حذف طريقة الدفع؟"
+
+  },
+  
+  "validation": {
+  "nameRequired": "اسم طريقة الدفع مطلوب",
+  "nameMin": "اسم طريقة الدفع يجب ألا يقل عن 3 أحرف",
+  "phoneRequired": "رقم الدفع مطلوب",
+  "phoneInvalid": "رقم الدفع غير صالح",
+  "phoneLength": "رقم الدفع يجب أن يكون 11 رقمًا"
+}
+
+}
+,
   "sectionsManagement": {
     "title": "إدارة الأقسام",
     "searchPlaceholder": "البحث في الأقسام...",
@@ -159,7 +220,7 @@
     }
   },
   "common": {
-    "cancel" : "الغاء",
+    "cancel": "الغاء",
     "update": "نحديث"
   },
   "fileUpload": {
