--- a/kalima-platform/frontend/public/locales/en/settings.json
+++ b/kalima-platform/frontend/public/locales/en/settings.json
@@ -1,30 +1,36 @@
 {
-    "title": "Settings",
-    "toggleSidebar": "Toggle Sidebar",
-    "General Points": "General Points",
-    "Total Points": "Total Points",
+  "title": "Settings",
+  "toggleSidebar": "Toggle Sidebar",
+  "General Points": "General Points",
+  "Total Points": "Total Points",
 
-    "personalInfo": {
-        "title": "Personal Information",
-        "subtitle": "Personal Details",
-        "labels": {
-          "fullName": "Full Name",
-          "phoneNumber": "Mobile Number",
-          "email": "Email Address",
-          "idNumber": "ID Number"
-        },
-        "placeholders": {
-          "fullName": "Example: John Doe",
-          "phoneNumber": "123-456-7890",  
-          "email": "example@domain.com", 
-          "idNumber": "Enter ID number"
-        },
-        "buttons": {
-          "edit": "Edit",
-          "add": "Add"
-        }
-      },
-    "languageAppearance": {
+  "personalInfo": {
+    "title": "Personal Information",
+    "subtitle": "Personal Details",
+    "labels": {
+      "fullName": "Full Name",
+      "phoneNumber": "Mobile Number",
+      "email": "Email Address",
+      "idNumber": "ID Number"
+    },
+    "placeholders": {
+      "fullName": "Example: John Doe",
+      "phoneNumber": "123-456-7890",
+      "email": "example@domain.com",
+      "idNumber": "Enter ID number"
+    },
+    "buttons": {
+      "edit": "Edit",
+      "add": "Add"
+    },
+    "preferredContactTime": {
+      "title": "Preferred Contact Time",
+      "from": "From",
+      "to": "To",
+      "note": "Note"
+    }
+  },
+  "languageAppearance": {
     "title": "Language & Appearance",
     "showThemes": "Show themes",
     "hideThemes": "Hide themes",
@@ -41,31 +47,31 @@
       "selected": "Selected"
     }
   },
-    "security": {
-      "title": "Security",
-      "labels": {
-        "currentPassword": "Current Password",
-        "newPassword": "New Password",
-        "confirmPassword": "Confirm Password"
-      },
-      "errors": {
-          "mismatch": "Passwords do not match",
-          "length": "Password must be at least 8 characters",
-          "general": "Error updating password"
-        },
-        "success": "Password updated successfully",
-        "changePassword": "Change Password",
-        "showPassword": "Show password",
-        "hidePassword": "Hide password",
-        "passwordRequirement": "Password must be at least 8 characters",
-        "updateButton": "Update Password",
-        "placeholders": {
-          "currentPassword": "Enter current password",
-          "newPassword": "New password",
-          "confirmPassword": "Confirm new password"
-        }
+  "security": {
+    "title": "Security",
+    "labels": {
+      "currentPassword": "Current Password",
+      "newPassword": "New Password",
+      "confirmPassword": "Confirm Password"
     },
-    "notifications": {
+    "errors": {
+      "mismatch": "Passwords do not match",
+      "length": "Password must be at least 8 characters",
+      "general": "Error updating password"
+    },
+    "success": "Password updated successfully",
+    "changePassword": "Change Password",
+    "showPassword": "Show password",
+    "hidePassword": "Hide password",
+    "passwordRequirement": "Password must be at least 8 characters",
+    "updateButton": "Update Password",
+    "placeholders": {
+      "currentPassword": "Enter current password",
+      "newPassword": "New password",
+      "confirmPassword": "Confirm new password"
+    }
+  },
+  "notifications": {
     "title": "Notifications",
     "studentType": "Student Notifications",
     "teacherType": "Teacher Notifications",
@@ -82,5 +88,4 @@
       "deadlineReminder": "Deadline reminder"
     }
   }
-    
-  }
+}
